# create-tauri-react-app

./: CHANGELOG.md  CONTRIBUTING.md  README.md  biome.jsonc  package.json  suggestions.md
.github/: TEMPLATE_README.md  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
.ruler/: RELEASING.md
scripts/: setup.ts
src/: app.test.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
